--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -68,6 +68,7 @@
 .fa-guide:before { content: "\f579" }
 .fa-info-circle:before { content: "\f561" }
 .fa-jigsaw:before { content: "\f50E" }
+.fa-lan:before { content: "\f552" }
 .fa-lastfm:before { content: "\f585" }
 .fa-left:before { content: "\f606" }
 .fa-library:before { content: "\f506" }
