--- a/srv/http/assets/css/info.css
+++ b/srv/http/assets/css/info.css
@@ -208,6 +208,7 @@ hr {
 #infoMessage {
 	display: inline-block;
 	width: fit-content;
+	max-width: 100%;
 	max-height: 800px;
 	margin: 0 auto 5px;
 	padding: 0 15px;
