--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -378,9 +378,10 @@ i.map.disabled, .map.disabled i {
 }
 #codepage {
 	position: absolute;
-	margin: 60px 20px;
-	width: calc( 100% - 40px );
+	width: 100%;
 	max-height: calc( 100% - 120px );
+	margin: 60px 0;
+	padding: 10px;
 	background: var( --cgd );
 	font-family: Inconsolata;
 	white-space: pre-wrap;
