--- a/srv/http/assets/css/settings.css
+++ b/srv/http/assets/css/settings.css
@@ -323,9 +323,10 @@ heading i.fa-question-circle {
 }
 .codepage {
 	position: absolute;
-	margin: 60px 20px;
-	width: calc( 100% - 40px );
+	width: 100%;
 	max-height: calc( 100% - 120px );
+	margin: 60px 0;
+	padding: 10px;
 	overflow-x: hidden;
 	white-space: pre-wrap;
 	z-index: 5;
