--- a/srv/http/assets/css/desktop.css
+++ b/srv/http/assets/css/desktop.css
@@ -112,8 +112,8 @@ li:not( .licover ),
 #bar-bottom,
 #bar-top i,
 #button-coverart,
+#button-data,
 #button-library,
-#button-playback,
 #button-playlist,
 #colorcancel,
 #colorok,
