--- a/srv/http/assets/css/settings.css
+++ b/srv/http/assets/css/settings.css
@@ -127,6 +127,17 @@
 }
 .message .fa-wifi:before { font-size: 20px }
 
+#button-data {
+	position: absolute;
+	top: 0;
+	width: 40px;
+	height: 40px;
+	margin: 0;
+	font-size: 30px;
+	text-align: center;
+	color: var( --cm );
+	z-index: 112;
+}
 #loader {
 	position: fixed;
 	width: 100%;
@@ -321,16 +332,16 @@ heading i.fa-question-circle {
 	font-size: 2em !important;
 	color: var( --cm );
 }
-.codepage {
+#data {
 	position: absolute;
 	width: 100%;
 	height: 100%;
 	max-height: 100%;
-	padding: 50px 10px;
+	padding: 40px 10px 10px;
 	background: #000;
 	overflow-x: hidden;
 	white-space: pre-wrap;
-	z-index: 5;
+	z-index: 111;
 }
 #bar-bottom {
 	position: fixed;
@@ -798,6 +809,7 @@ input:checked + .switchlabel.disabled:after {
 	.settingedit,
 	.status,
 	.switchlabel,
+	#button-data,
 	#close,
 	#filetype,
 	#help {
