--- a/srv/http/assets/css/relays.css
+++ b/srv/http/assets/css/relays.css
@@ -5,6 +5,7 @@
 .fa-link:before { content: "\f52C" }
 .fa-power:before { content: "\f520" }
 .fa-relays:before { content: "\f522" }
+.fa-stopwatch:before { content: "\f547" }
 .fa-tag:before { content: "\f55B" }
 
 .selectric-on,
