--- a/srv/http/assets/css/settings.css
+++ b/srv/http/assets/css/settings.css
@@ -127,7 +127,7 @@
 .message .fa-wifi:before { font-size: 20px }
 
 #button-data {
-	position: absolute;
+	position: fixed;
 	top: 0;
 	width: 40px;
 	height: 40px;
