--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -1782,10 +1782,13 @@ i.map.disabled, .map.disabled i {
 #button-data {
 	position: absolute;
 	width: 40px;
-	top: 0;
+	top: 40px;
 	font-size: 30px;
 	text-align: center;
 	z-index: 112;
+}
+#button-data.nobars {
+	top: 0;
 }
 #pl-path .fa-arrow-left {
 	width: 40px !important;
