--- a/srv/http/assets/css/banner.css
+++ b/srv/http/assets/css/banner.css
@@ -35,6 +35,9 @@
 	text-align: center;
 	background-color: var( --cg );
 }
+#bannerIcon i {
+	width: 30px;
+}
 #bannerMessage {
 	font-size: 16px;
 }
