--- a/srv/http/assets/css/relays.css
+++ b/srv/http/assets/css/relays.css
@@ -52,7 +52,7 @@ span.timer i {
 #gpiopin,
 #gpiopin1 {
 	display: none;
-	margin-bottom: 10px;
+	margin: 10px 0;
 	width: 100%;
 	border-radius: 6px;
 	background: var( --cw );
