--- a/srv/http/assets/css/settings.css
+++ b/srv/http/assets/css/settings.css
@@ -655,7 +655,7 @@ input:checked + .switchlabel.disabled:after {
 #gpiopin,
 #gpiopin1 {
 	display: none;
-	margin-bottom: 10px;
+	margin: 10px 0;
 	width: 100%;
 	border-radius: 6px;
 	background: var( --cw );
