--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -46,7 +46,8 @@
 .fa-check:before { content: "\f51B" }
 .fa-code:before { content: "\f50C" }
 .fa-composer:before { content: "\f558" }
-.fa-coverart:before { content: "\f559" }
+.fa-conductor:before { content: "\f559" }
+.fa-coverart:before { content: "\f60D" }
 .fa-coverart-refresh:before { content: "\f53D" }
 .fa-crop:before { content: "\f568" }
 .fa-date:before { content: "\f54B" }
