--- a/srv/http/assets/css/settings.css
+++ b/srv/http/assets/css/settings.css
@@ -63,12 +63,12 @@
 .fa-lock-circle:before { content: "\f574" }
 .fa-microsd:before { content: "\f543" }
 .fa-minus-circle:before { content: "\f563" }
-.fa-mpd:before { content: "\f582" }
 .fa-music:before { content: "\f54C" }
 .fa-network:before { content: "\f551" }
 .fa-networks:before { content: "\f551" }
 .fa-output:before { content: "\f52B" }
 .fa-play:before { content: "\f503" }
+.fa-player:before { content: "\f582" }
 .fa-play-circle:before { content: "\f507" }
 .fa-plus:before { content: "\f519" }
 .fa-plus-circle:before { content: "\f564" }
