--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -599,6 +599,9 @@ i.map.disabled, .map.disabled i {
 .albumradio {
 	color: var( --cgl );
 }
+.capitalize {
+	text-transform: capitalize;
+}
 #infoicon {
 	height: 25px;
 	font-size: 0;
