--- a/srv/http/assets/css/info.css
+++ b/srv/http/assets/css/info.css
@@ -263,12 +263,19 @@ hr {
 	display: block;
 }
 #infoContent textarea {
+	width: 100%;
 	height: 100px;
 	margin: 0 !important;
 	padding: 5px 10px;
 	border-radius: 4px;
+	border: none;
+	outline: none;
+	font-family: Inconsolata;
 	font-size: 16px;
-	resize: none;
+	line-height: 20px;
+	tab-size: 4;
+	color: var( --cw );
+	background: var( --cgd );
 	overflow: hidden;
 }
 .infolabel {
