--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -102,6 +102,8 @@
 .fa-previous:before { content: "\f501" }
 .fa-question-circle:before { content: "\f560" }
 .fa-radiofrance:before { content: "\f594" }
+.fa-radioparadise1:before {content: "\f595"; color: var( --cgl ); }
+.fa-radioparadise2:before { content: "\f596" }
 .fa-random:before { content: "\f512" }
 .fa-reboot:before { content: "\f521" }
 .fa-redo:before { content: "\f524" }
@@ -140,15 +142,8 @@
 .fa-volume:before { content: "\f516" }
 .fa-warning:before { content: "\f562" }
 .fa-webradio:before { content: "\f55C" }
-.fa-radioparadise1:before { content: "\f595" }
-.fa-radioparadise2:before { content: "\f596" }
-.fa-radioparadise1 {
-	position: absolute;
-	color: var( --cgl );
-}
-.fa-radioparadise2 {
-	position: relative;
-}
+.fa-layer { position: absolute }
+.fa-layerlast { position: relative }
 *,
 *:before,
 *:after {
@@ -266,7 +261,7 @@ blb {
 	color: var( --cm );
 }
 gr, grl,
-.gr { color: var( --cg60 ) !important; }
+.gr, .grl { color: var( --cg60 ) !important; }
 red, .red { color: #f00; }
 whl, grl,
 .whl, .grl,
