--- a/srv/http/assets/css/settings.css
+++ b/srv/http/assets/css/settings.css
@@ -107,25 +107,16 @@
 .fa-wifi1:before { content: "\f588" }
 .fa-wifi2:before { content: "\f589" }
 .fa-wifi3:before { content: "\f58A" }
-.fa-wifi1,
-.fa-wifi2,
-.fa-wifi3 {
-	vertical-align: 0 !important;
-}
-.fa-wifi1,
-.fa-wifi2 {
-	position: absolute;
-}
-.wf1 .fa-wifi2,
-.wf1 .fa-wifi3 {
-	color: var( --cga );
-}
-.wf2 .fa-wifi3 {
-	color: var( --cga );
-}
+.fa-layer { position: absolute }
+.fa-layerlast { position: relative }
 .wf1, .wf2, .wf3 {
 	width: 40px !important;
 	margin-right: 5px;
+}
+.wf1 .fa-wifi2,
+.wf1 .fa-wifi3,
+.wf2 .fa-wifi3 {
+	color: var( --cga );
 }
 .message .fa-wifi:before { font-size: 20px }
 
@@ -423,6 +414,9 @@ grw,
 	vertical-align: -2px;
 	text-align: center;
 	color: var( --cg60 );
+}
+#listwlscan i {
+	vertical-align: 0;
 }
 .entries .fa-save {
 	width: 20px;
