--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -79,6 +79,7 @@
 .fa-microsd:before { content: "\f543" }
 .fa-minus:before { content: "\f518" }
 .fa-minus-circle:before { content: "\f563" }
+.fa-mpd:before { content: "\f507" } /* fa-play-circle */
 .fa-music:before { content: "\f54C" }
 .fa-mute:before { content: "\f517" }
 .fa-nas:before { content: "\f551" }
@@ -89,7 +90,6 @@
 .fa-pause:before { content: "\f504" }
 .fa-play:before { content: "\f503" }
 .fa-play-circle:before { content: "\f507" }
-#tab-playback.fa-mpd:before { content: "\f507" }
 .fa-player:before { content: "\f582" }
 .fa-play-plus:before { content: "\f532" }
 .fa-play-replace:before { content: "\f533" }
