--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -2107,17 +2107,17 @@ li.active .iconthumb {
 }
 .savewr {
 	position: absolute;
-	margin-top: 27px;
-	width: 20px;
-	height: 20px;
+	margin: 29px 0 0 1px;
+	width: 18px;
+	height: 18px;
 	border-radius: 50%;
 	background: var( --cw );
 }
 .savewr i {
-	position: relative;
-	margin-left: -10px; 
-	font-size: 16px !important;
-	line-height: 15px !important;
+	position: absolute;
+	top: -14px;
+	left: -11px;
+	font-size: 14px !important;
 	color: #000000 !important;
 }
 #pl-list li.radio {
